<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fevaworks Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="csw_title">Cheung Sha Wan Branch</string>
    <string name="wc_title">Wan Chai Branch</string>
    <string name="address_title">Branch Address</string>
    <string name="csw_address">G4&#8211;5P Trade Square, 681 Cheung Sha Wan Rd, Sham Shui Po District</string>
    <string name="wc_address">4th/F Tung Wah Mansion, 199&#8211;203 Hennessy Rd, Wan Chai</string>
    <string name="csw_mtr_address">Cheung Sha Wan MTR Station Exit B</string>
    <string name="wc_mtr_address">Wan Chai MTR Station Exit A2</string>
    <string name="nearest_mtr_exit">Closest MTR Station</string>
    <string name="branch_tab_indicator">Branch</string>
    <string name="aboutme_tab_indicator">About Me</string>
    <string name="aboutme">About Me</string>
    <string name="phoneNo">Phone #:</string>
    <string name="phoneValue">(852) 91600987</string>
    <string name="phoneValue1">91600987</string>
    <string name="email">Email:</string>
    <string name="emailValue">cleung334@gmail.com</string>
    <string name="blog">Blog:</string>
    <string name="blogValue"><a href="http://www.blueskyconnie.com">http://www.blueskyconnie.com</a></string>
    <string name="name">Name:</string>
    <string name="nameValue">Connie Leung</string>
    <string name="btn_dial_text">Call Immediately</string>
    <string name="btn_send_email">Send Email</string>
    <string name="btn_send_sms">Send SMS</string>
    <string name="taken_tab_indicator">Taken</string>
    <string name="current_tab_indicator">Current</string>
    <string name="upcoming_tab_indicator">Upcoming</string>
    <string name="NoCourse">No Course</string>
    <string name="change_current_title">Change to Current</string>
    <string name="change_taken_title">Change to Taken</string>
    <string name="change_upcoming_title">Change to Upcoming</string>
    <string name="delete_course_title">Delete Course</string>
    <string name="edit_course_title">Edit Course</string>
    <string name="actions">Options</string>
    <string name="title_confirm">Confirm</string>
    <string name="confirmDelete">Are you sure to delete this course?</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="course_deleted">Course is deleted.</string>
    <string name="course_name">Course: </string>
    <string name="course_type">"Type: "</string>
    <string name="instructor_hint">Enter name (max 100)</string>
    <string name="course_hint">Enter course (max 200)</string>
    <string name="instructor">Instructor:</string>
    <string name="btn_save">Save</string>
    <string name="btn_create">Create</string>
    <string name="add_new_course">Add Course</string>
    <string name="status">Status:</string>
    <string name="code">Code:</string>
	<string name="blank_course">Course cannot be blank.</string>
	<string name="blank_code">Code cannot be blank.</string>
	<string name="blank_instructor">Instructor cannot be blank.</string>
	<string name="course_created">Course created.</string>
	<string name="course_not_created">Course not created.</string>
</resources>